# medicalbot

./: chainlitUI.py  pyproject.toml  requirements.txt
